--- a/goodbye.html
+++ b/goodbye.html
@@ -1,6 +1,6 @@
 <h1> Goodbye </h1>
 <h2> A program to bid our friends farewell all over the world. </h2>
-
+<p>We are testing!</p>
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
